--- a/package.json
+++ b/package.json
@@ -2,23 +2,29 @@
     "name": "blockly-vue3",
     "version": "0.0.0",
     "scripts": {
-      "start": "vite",
-      "build": "vite build",
-      "preview": "vite preview --port 4173",
-      "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+        "start": "vite",
+        "build": "vite build",
+        "preview": "vite preview --port 4173",
+        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
-      "blockly": "^8.0.3",
-      "vue": "^3.2.37"
+        "@blockly/theme-dark": "^3.0.17",
+        "@popperjs/core": "^2.11.6",
+        "blockly": "^8.0.3",
+        "bootstrap": "^5.2.1",
+        "bootstrap-vue": "^2.22.0",
+        "vue": "^3.2.37",
+        "vue-toast-notification": "^0.6.3",
+        "vue-tour": "^2.0.0"
     },
     "devDependencies": {
-      "@rushstack/eslint-patch": "^1.1.0",
-      "@vitejs/plugin-vue": "^2.3.3",
-      "@vue/eslint-config-prettier": "^7.0.0",
-      "eslint": "^8.5.0",
-      "eslint-plugin-vue": "^9.0.0",
-      "prettier": "^2.5.1",
-      "vite": "^2.9.12",
-      "vite-plugin-static-copy": "^0.6.0"
+        "@rushstack/eslint-patch": "^1.1.0",
+        "@vitejs/plugin-vue": "^2.3.3",
+        "@vue/eslint-config-prettier": "^7.0.0",
+        "eslint": "^8.5.0",
+        "eslint-plugin-vue": "^9.0.0",
+        "prettier": "^2.5.1",
+        "vite": "^2.9.15",
+        "vite-plugin-static-copy": "^0.6.0"
     }
-  }
+}
