--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bootstrap": "^5.2.1",
         "bootstrap-vue": "^2.22.0",
         "vue": "^3.2.37",
+        "vue-sweetalert2": "^5.0.5",
         "vue-toast-notification": "^0.6.3",
         "vue-tour": "^2.0.0"
     },
