--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     },
     "dependencies": {
         "@blockly/theme-dark": "^3.0.17",
+        "@blockly/workspace-backpack": "^2.0.16",
         "@popperjs/core": "^2.11.6",
         "blockly": "^8.0.3",
         "bootstrap": "^5.2.1",
         "bootstrap-vue": "^2.22.0",
+        "js-beautify": "^1.14.6",
+        "jszip": "^3.10.1",
+        "localforage": "^1.10.0",
         "vue": "^3.2.37",
         "vue-sweetalert2": "^5.0.5",
         "vue-toast-notification": "^0.6.3",
