--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "blockly": "^8.0.3",
         "bootstrap": "^5.2.1",
         "bootstrap-vue": "^2.22.0",
+        "esbuild": "^0.15.10",
         "js-beautify": "^1.14.6",
         "jszip": "^3.10.1",
         "localforage": "^1.10.0",
