--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "blockly-vue3",
-    "version": "0.0.0",
+    "name": "domnio-script-builder",
+    "version": "1.0.0",
     "scripts": {
         "start": "vite",
         "build": "vite build",
