--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "start": "vite",
         "build": "vite build",
         "preview": "vite preview --port 4173",
-        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+        "test": "nodemon src/index.js"
     },
     "dependencies": {
         "@blockly/theme-dark": "^3.0.17",
@@ -18,6 +19,7 @@
         "js-beautify": "^1.14.6",
         "jszip": "^3.10.1",
         "localforage": "^1.10.0",
+        "pocketbase": "^0.10.1",
         "vue": "^3.2.37",
         "vue-sweetalert2": "^5.0.5",
         "vue-tour": "^2.0.0"
@@ -28,6 +30,7 @@
         "@vue/eslint-config-prettier": "^7.0.0",
         "eslint": "^8.5.0",
         "eslint-plugin-vue": "^9.0.0",
+        "nodemon": "^2.0.20",
         "prettier": "^2.5.1",
         "vite": "^2.9.15",
         "vite-plugin-static-copy": "^0.6.0"
