--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
         "@popperjs/core": "^2.11.6",
         "blockly": "^8.0.3",
         "bootstrap": "^5.2.1",
-        "bootstrap-vue": "^2.22.0",
+        "bootstrap-vue": "^2.23.1",
+        "deta": "^1.1.0",
+        "dotenv": "^16.0.3",
         "esbuild": "^0.15.10",
         "js-beautify": "^1.14.6",
         "jszip": "^3.10.1",
         "localforage": "^1.10.0",
         "pocketbase": "^0.10.1",
         "vue": "^3.2.37",
-        "vue-sweetalert2": "^5.0.5",
-        "vue-tour": "^2.0.0"
+        "vue-sweetalert2": "^5.0.5"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.0",
